upgraded the spring boot version