@@ -62,7 +62,7 @@ public class SpringSecurityProd {
 
             response.setContentType("application/json");
             response.setStatus(httpResponse);
-            response.getWriter().write(String.format("{\"error\":\"%s\"}", error));
+            response.getWriter().write("{\"error\":\"%s\"}".formatted(error));
             response.getWriter().flush();
         }
     }
